# short-semester-hw

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  MVVM_todo.md  requirement.txt  run_game.bat
.github/workflows/: ci.yml
qml/: Main.qml
src/: main.cpp
src/domain/: CharacterFactory.cpp  CharacterFactory.h  CharacterSystem.cpp  CharacterSystem.h  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  NpcSystem.cpp  NpcSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  SceneBuilder.cpp  SceneBuilder.h  WorldProcessor.cpp  WorldProcessor.h
src/model/: GameWorldTypes.h
src/service/: ResourceManager.cpp  ResourceManager.h
src/viewmodel/: CharacterListModel.cpp  CharacterListModel.h  GameWorldViewModel.cpp  GameWorldViewModel.h
tests/: DomainSystemsTest.cpp  TestCharacterFactory.cpp  TestCharacterSystem.cpp  TestCollisionSystem.cpp  TestCombatSystem.cpp  TestNpcSystem.cpp  TestSceneBuilder.cpp
